# http-client

./: .copier-answers.yml  Cargo.toml  README.md  act.toml  justfile  prek.toml
.github/workflows/: ci.yml
e2e/: fetch.hurl  info.hurl  list_tools.hurl  run.sh  tools.hurl
skill/: SKILL.md
src/: lib.rs
wit/: act-core.wit
