[package]
name = "http-client"
version = "0.1.0"
edition = "2024"

[dependencies]
act-sdk = { path = "../../act-component-sdk-rust/act-sdk" }
wit-bindgen = { version = "0.53", features = ["async-spawn"] }
serde = { version = "1", features = ["derive"] }
serde_with = "3"
schemars = "1"
serde_json = "1"
http = "1"
http-serde = "2"
wasip3 = "0.4"

[lib]
crate-type = ["cdylib"]
