[package]
name = "http-client"
version = "0.1.0"
edition = "2024"

[dependencies]
act-sdk = "0.2.2"
wit-bindgen = { version = "0.54.0", features = ["async-spawn"] }
serde = { version = "1", features = ["derive"] }
serde_with = "3"
schemars = "1"
serde_json = "1"
http = "1"
http-serde = "2"
wasip3 = "0.4"
wasi-fetch = { path = "../../wasi-fetch" }

[lib]
crate-type = ["cdylib"]
